(fix) finalize layering
